<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.fokk.vforvector.CreditsActivity">

    <TextView android:text="@string/credits_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:layout_weight="1.666667"
        android:gravity="center"/>

    <TextView android:text="@string/credits_main_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_weight="1.666667"
        android:textStyle="bold"/>

    <TextView android:text="@string/credits_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_weight="1.666667"/>

    <TextView android:text="@string/credits_assist_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_weight="1.666667"
        android:textStyle="bold"/>

    <TextView android:text="@string/credits_assist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_weight="1.666667"/>


    <TextView android:text="@string/credits_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_weight="1.666667"
        android:gravity="center"/>

</LinearLayout>
