<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.fokk.vforvector.SubtractionActivity">

    <TextView android:text="@string/subtraction_vectorA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_weight="0.1666667"
        android:gravity="center"
        android:textColor="#000000"/>

    <EditText android:id="@+id/subtraction_edit_vectorA"
        android:hint="@string/addition_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1666667"
        android:gravity="center"/>

    <TextView android:text="@string/subtraction_vectorB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_weight="0.1666667"
        android:gravity="center"
        android:textColor="#000000"/>

    <EditText android:id="@+id/subtraction_edit_vectorB"
        android:hint="@string/subtraction_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1666667"
        android:gravity="center"/>

    <Button android:text="@string/subtraction_subtract_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="subtract_function"
        android:layout_weight="0.1666667"
        android:gravity="center"/>

    <TextView android:id="@+id/subtraction_text_result"
        android:hint="@string/subtraction_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1666667"
        android:gravity="center"
        android:textSize="20dp"/>

</LinearLayout>
