<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.fokk.vforvector.TriviaActivity">

    <TextView android:text="@string/trivia_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.25"
        android:textSize="20dp"
        android:textColor="#000000"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trivia_addition_button"
        android:onClick="addition_theory"
        android:layout_weight="0.25"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trivia_subtraction_button"
        android:onClick="subtraction_theory"
        android:layout_weight="0.25"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trivia_cross_product_button"
        android:onClick="cross_product_theory"
        android:layout_weight="0.25"/>

</LinearLayout>
