<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context="com.fokk.vforvector.AdditionTheoryActivity">

            <TextView android:text="@string/subtraction_theory_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView android:text="@string/subtraction_theory_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/additiontriangle"
                android:layout_gravity="center"/>

            <TextView android:text="@string/subtraction_theory_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/subtractiontriangle"
                android:layout_gravity="center"/>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>